# pag

./: .gitignore  Caddyfile  Cargo.toml  README.md  diagram  docker-compose.yml  pag.conf
cli/: Cargo.toml
cli/src/: cli_types.rs  main.rs
cli/src/commands/: check.rs  clean.rs  download.rs  flatpak.rs  info.rs  init.rs  install.rs  key.rs  list.rs  mod.rs  query.rs  remove.rs  repo.rs  search.rs  stats.rs  update.rs
cli/src/config/: mod.rs
cli/src/crypto/: mod.rs
cli/src/db/: mod.rs
cli/src/flatpak/: mod.rs
cli/src/i18n/: mod.rs
cli/src/package/: mod.rs
cli/src/repo/: mod.rs
cms/: .env.example  README.md  docker-compose.yml
cms-server/: Cargo.toml  Dockerfile  cms.example.toml
cms-server/src/: auth.rs  build_queue.rs  config.rs  db.rs  main.rs  models.rs  state.rs
cms-server/src/handlers/: auth_handlers.rs  builds.rs  dashboard.rs  mod.rs  packages.rs  settings.rs  webhooks.rs  ws.rs
cms/backend/: Cargo.toml  Dockerfile  Dockerfile.worker
cms/backend/migrations/: 001_init.sql
cms/backend/src/: config.rs  db.rs  main.rs
cms/backend/src/handlers/: auth.rs  builds.rs  packages.rs  ports.rs  repos.rs
cms/backend/src/middleware/: auth.rs  cors.rs
cms/backend/src/models/: build.rs  mod.rs  package.rs  port.rs  repo.rs  user.rs
cms/backend/src/services/: auth.rs  builds.rs  mod.rs  packages.rs  ports.rs  repos.rs
cms/deploy/nginx/: nginx.conf
cms/frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js
cms/frontend/src/: App.tsx  index.css  main.tsx
cms/frontend/src/api/: client.ts
cms/frontend/src/components/: Layout.tsx  StatCard.tsx  StatusBadge.tsx
cms/frontend/src/context/: AuthContext.tsx
cms/frontend/src/pages/: Builds.tsx  Dashboard.tsx  Login.tsx  Packages.tsx  Ports.tsx  Repos.tsx
cms/worker/: Cargo.toml
cms/worker/src/: main.rs
docs/: CONTABO-DEPLOY.md  DEPLOY-TUTORIAL.md
examples/: add_popular.py  auto-build.sh  fill_missing_deps.py  generate_pagbuilds.py
examples/pagports/main/7zip/: pagbuild
examples/pagports/main/adbtuifm/: pagbuild
examples/pagports/main/adwaita-icon-theme/: pagbuild
examples/pagports/main/alacritty/: pagbuild
examples/pagports/main/appstream/: pagbuild
examples/pagports/main/aquamarine/: pagbuild
examples/pagports/main/ark/: pagbuild
examples/pagports/main/audacity/: pagbuild
examples/pagports/main/audit/: pagbuild
examples/pagports/main/bash/: pagbuild
examples/pagports/main/bat/: pagbuild
examples/pagports/main/bison/: pagbuild
examples/pagports/main/blender/: pagbuild
examples/pagports/main/bluez/: pagbuild
examples/pagports/main/bottles/: pagbuild
examples/pagports/main/brave/: pagbuild
examples/pagports/main/breeze/: pagbuild
examples/pagports/main/breeze-gtk/: pagbuild
examples/pagports/main/breeze-icons/: pagbuild
examples/pagports/main/brightnessctl/: pagbuild
examples/pagports/main/btop/: pagbuild
examples/pagports/main/cairo/: pagbuild
examples/pagports/main/calibre/: pagbuild
examples/pagports/main/chromium/: pagbuild
examples/pagports/main/cmake/: pagbuild
examples/pagports/main/curl/: pagbuild
examples/pagports/main/dbus/: pagbuild
examples/pagports/main/dbus-glib/: pagbuild
examples/pagports/main/delta/: pagbuild
examples/pagports/main/discord/: pagbuild
examples/pagports/main/distrobox/: pagbuild
examples/pagports/main/docker/: pagbuild
examples/pagports/main/dolphin/: pagbuild
examples/pagports/main/dunst/: pagbuild
examples/pagports/main/dust/: pagbuild
examples/pagports/main/elogind/: pagbuild
examples/pagports/main/expat/: pagbuild
examples/pagports/main/eza/: pagbuild
examples/pagports/main/fastfetch/: pagbuild
examples/pagports/main/fd/: pagbuild
examples/pagports/main/ffmpeg/: pagbuild
examples/pagports/main/fira-code/: pagbuild
examples/pagports/main/firefox/: pagbuild
examples/pagports/main/flatpak/: pagbuild
examples/pagports/main/fontconfig/: pagbuild
examples/pagports/main/foot/: pagbuild
examples/pagports/main/freetype/: pagbuild
examples/pagports/main/fribidi/: pagbuild
examples/pagports/main/fzf/: pagbuild
examples/pagports/main/gamemode/: pagbuild
examples/pagports/main/gcc/: pagbuild
examples/pagports/main/gh/: pagbuild
examples/pagports/main/gimp/: pagbuild
examples/pagports/main/git/: pagbuild
examples/pagports/main/glibc/: pagbuild
examples/pagports/main/go/: pagbuild
examples/pagports/main/gperf/: pagbuild
examples/pagports/main/grim/: pagbuild
examples/pagports/main/gstreamer/: pagbuild
examples/pagports/main/gtk+2.0/: pagbuild
examples/pagports/main/gtk+3.0/: pagbuild
examples/pagports/main/gwenview/: pagbuild
examples/pagports/main/handbrake/: pagbuild
examples/pagports/main/harfbuzz/: pagbuild
examples/pagports/main/helix/: pagbuild
examples/pagports/main/heroic-games-launcher/: pagbuild
examples/pagports/main/htop/: pagbuild
examples/pagports/main/hyprcursor/: pagbuild
examples/pagports/main/hyprgraphics/: pagbuild
examples/pagports/main/i3/: pagbuild
examples/repo/: index.json
locale/en/LC_MESSAGES/: pag.mo  pag.po
locale/pl/LC_MESSAGES/: pag.mo  pag.po
pagbuild/: Cargo.toml
pagbuild/src/: crypto.rs  main.rs  pag_package_header.rs
pagbuild/src/builder/: mod.rs
pagbuild/src/parser/: mod.rs
pagbuild/src/repo/: mod.rs
pagbuild/src/signer/: mod.rs
repo-server/: Cargo.toml
repo-server/src/: main.rs
src/: main.rs
tools/: import_void_templates.sh
web/: astro.config.mjs  package-lock.json  package.json
web/cms/: Dockerfile  astro.config.mjs  package.json
web/main/: astro.config.mjs  package.json
web/ports/: astro.config.mjs  package.json
web/public/styles/: global.css
web/repos/: astro.config.mjs  package.json
web/src/components/: CTA.astro  Features.astro  Footer.astro  Hero.astro  InstallSection.astro  LangSwitcher.astro  LiveStats.astro  Nav.astro
web/src/i18n/: index.ts  languages.ts  ui.ts  utils.ts
web/src/layouts/: BaseLayout.astro
web/src/lib/: api.ts  constants.ts
web/src/pages/: 404.astro  docs.astro  download.astro  index.astro
(+203 files in other folders)
