[package]
name = "pag"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
chrono = "0.4.45"
clap = { version = "4.6.1", features = ["derive"] }
flate2 = "1.1.9"
gettextrs = { package = "gettext-rs", version = "0.7.7" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sha2 = "0.11.0"
tar = "0.4.46"
tempfile = "3.27.0"
toml = "1.1.2"
ureq = "3.3.0"
walkdir = "2.5.0"
