[package]
name = "pag-cms-server"
version = "0.1.0"
edition = "2024"
description = "PaganLinux CMS Server — backend panelu zarządzania ekosystemem"
authors = ["PaganLinux Team"]
license = "GPL-2.0-only"

[[bin]]
name = "pag-cms"
path = "src/main.rs"

[dependencies]
# Web framework + WebSocket
axum = { version = "0.8", features = ["macros", "ws"] }
axum-extra = { version = "0.10", features = ["cookie"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["fs", "cors", "trace", "compression-gzip", "auth"] }

# Async
tokio = { version = "1.42", features = ["full"] }
tokio-stream = "0.1"
futures = "0.3"

# Database — async SQLite
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "chrono", "uuid"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Auth
argon2 = "0.5"
async-trait = "0.1"
rand = "0.8"
uuid = { version = "1.11", features = ["v4", "serde"] }

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Config
toml = "0.8"
dotenvy = "0.15"

# Time
chrono = { version = "0.4", features = ["serde"] }

# HTTP client (for Forgejo API calls)
reqwest = { version = "0.12", features = ["json"] }

# Hashing
sha2 = "0.10"
hex = "0.4"

[profile.release]
opt-level = 3
lto = "fat"
