[package]
name = "pagbuild"
version = "0.1.0"
edition = "2024"
description = "PaganLinux Build System - budowanie pakietów .pag z pagports"
authors = ["PaganLinux Team"]
license = "GPL-2.0-only"

[[bin]]
name = "pagbuild"
path = "src/main.rs"

[dependencies]
# CLI
clap = { version = "4.5", features = ["derive", "env"] }
indicatif = "0.17"
console = "0.15"
colored = "3.0"

# Async
tokio = { version = "1.42", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Compression
flate2 = "1.0"
xz2 = "0.1"
zstd = "0.13"
tar = "0.4"

# Crypto & signing
sequoia-openpgp = "1.21"
sha2 = "0.10"
blake3 = "1.5"
hex = "0.4"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Time
chrono = "0.4"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# System
nix = { version = "0.29", features = ["fs", "process", "mount", "sched"] }
tempfile = "3.14"
walkdir = "2.5"

# Regex
regex = "1.11"

# HTTP
reqwest = { version = "0.12", features = ["rustls-tls"] }

# Container
bollard = "0.17"

# Which (find executables)
which = "7.0"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
