[package]
name = "pag-repo-server"
version = "0.1.0"
edition = "2024"
description = "PaganLinux Repository Server - serwer repozytorium pakietów .pag"
authors = ["PaganLinux Team"]
license = "GPL-2.0-only"

[[bin]]
name = "pag-repo"
path = "src/main.rs"

[dependencies]
# Web framework
axum = { version = "0.8", features = ["macros", "multipart"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["fs", "cors", "trace", "compression-gzip", "compression-br"] }

# Async
tokio = { version = "1.42", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Database
rusqlite = { version = "0.32", features = ["bundled"] }

# Crypto
sequoia-openpgp = "1.21"
sha2 = "0.10"
blake3 = "1.5"
hex = "0.4"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Config
toml = "0.8"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Templates
tera = "1.20"

[profile.release]
opt-level = 3
lto = "fat"
